--- a/src/shared/styles/globals.css
+++ b/src/shared/styles/globals.css
@@ -145,6 +145,7 @@ select:focus {
 		width: calc(100% - 32px) !important;
 		left: 16px !important;
 		right: 16px !important;
+		top: 16px !important;
 		padding: 0 !important;
 	}
 
